Bug 298690 - Program can't start because of missing .dll file
Summary: Program can't start because of missing .dll file
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-23 19:20 UTC by Anssi
Modified: 2012-12-29 10:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anssi 2012-04-23 19:20:27 UTC
This is the exact error message:
Krita.exe - System error
The program can't start because komain.dll is missing from your
computer. Try reinstalling the program to fix this problem.

This was from the extremely experimental installer that contains just Krita that was
last updated: 2012-04-23 15:31

Reproducible: Always

Steps to Reproduce:
1. Install krita_unstable.msi
2. go to program files x86/ krita / bin / krita.exe
3. right click > properties > run program as administrator
4. launch program
Actual Results:  
Missing .dll error message

Expected Results:  
Start program

Windows 7 64bit Ultimate edition
Service pack 1
Intel core 2 duo E8600 3.33 GHz
4GB ram
AMD Radeon HD5870
Comment 1 Stuart Dickson 2012-04-24 08:10:42 UTC
Hi Anssi!

Thanks for your report. Krita is behaving as expected - Krita on Windows relies on a number of shared libraries, including some provided by KDE on Windows.

The error message you are getting is because Krita\lib (where komain.dll is located) is not on your PATH, so Windows doesn't know it should look there for libraries. However, there a number of other environment variables we need to set for KDE to find plugins, which is why env.bat performs before launching the application. env.bat is designed to be run from the command line, which is useful for testing. As we do not want to cause problems with other KDE on Windows installations, we set up the environment the programs run in each time before launch.

To run Krita, you can use one of the provided shortcuts, or you can make a new shortcut to Krita\StartApp.vbs and in the shortcut properties, add "krita" as a parameter. This runs env.bat without a pop-up command-line window, which in turn launches the application.

May I ask why you are trying to run Krita with elevated privileges? This use-case is not expected or supported at present - whilst I was able to get it running, it caused new errors and behaviour.

We do have plans on simplifying the launch of the application in future.
Comment 2 Halla Rempt 2012-04-27 12:22:43 UTC
so we should move the other dll's as well and fix the startup code. On the other hand, Krita shouldn't be run in admin mode. Confirming the bug.
Comment 3 Halla Rempt 2012-12-29 10:54:14 UTC
Git commit 8c0ef32ac113db8af7e32d295d3bb4a92f44ca6d by Boudewijn Rempt.
Committed on 29/12/2012 at 11:54.
Pushed by rempt into branch 'master'.

Port the setting of env variables on windows to krita (from sketch)

This makes sure that krita can start, even without the .bat file, but
it shouldn't hamper using the .bat file in the shared calligra windows
package.

M  +40   -0    krita/main.cc

http://commits.kde.org/calligra/8c0ef32ac113db8af7e32d295d3bb4a92f44ca6d