Port the setting of env variables on windows to krita (from sketch)

This makes sure that krita can start, even without the .bat file, but
it shouldn't hamper using the .bat file in the shared calligra windows
package.

BUG:298690